<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">通通收购员版</string>
    <string name="logo_text">小智商网络科技有限公司@通通收菜</string>
    <string name="main_title">我要收菜</string>
    <string name="collection_text">收藏夹</string>
    <string name="buy_title">我的收购</string>
    <string name="release_info_title">蔬菜备注</string>
    <string name="buy_text">我的收购</string>
    <string name="online"><u>在线客服</u></string>
    <string name="cancel">取消</string>
    <string name="find_contact">查找添加</string>
    <string name="confirm">确定</string>
    <string name="copy_right">Copyright &#169; 2016-2018 52tongtong All Rights Reserved</string>
    <string name="network_setting"><u>设置网络</u></string>
    <string name="login_text">免注册登录</string>
    <string name="phone_err">手机号输入有误</string>
    <string name="send_code_success">验证码已经发送</string>
    <string name="code_err">验证码错误,请重新获取</string>
    <string name="resend">重新发送</string>
    <string name="username_null">请您填写手机号</string>
    <string name="code_null">请您填写验证码</string>
    <string name="password_null">请您填写密码</string>
    <string name="password_lenght_err">密码至少6个字符</string>
    <string name="confingpassword_null">请您填写确定密码</string>
    <string name="confingpassword_err">输入的两次密码不正确</string>
    <string name="net_err">您的网速不给力哦</string>
    <string name="submit_fail">提交失败</string>
    <string name="myinfo_title">个人信息</string>
    <string name="register_text_title">用户注册</string>
    <string name="find_password_text_title">找回密码</string>
    <string name="update_password_text_title">密码修改</string>
    <string name="username">手机号</string>
    <string name="register">注册</string>
    <string name="submit">提交</string>
    <string name="app_err">内部错误</string>
    <string name="username_hint">请输入手机号</string>
    <string name="nickname_hint">设置用户名</string>
    <string name="password_hint">请输入密码</string>
    <string name="find_password"><u>找回密码</u></string>
    <string name="register_text"><u>用户注册</u></string>
    <string name="get_code"><u>获取验证码</u></string>
    <string name="code_number">验证码</string>
    <string name="code_hint">请输入验证码</string>
    <string name="password_number">密码</string>
    <string name="newpassword_number">新密码</string>
    <string name="newpassword_hint">请输入新密码</string>
    <string name="cofingpassword_number">确定密码</string>
    <string name="cofingpassword_hint">请确定密码</string>
    <string name="cofingnewpassword_hint">请确定新密码</string>
    <string name="register_loading">正在注册</string>
    <string name="login_loading">正在登录</string>
    <string name="register_data_err_code">注册失败，数据错误</string>
    <string name="register_phone_exist_code">您的手机号码已经被注册</string>
    <string name="register_success">注册成功</string>
    <string name="login_success">登录成功</string>
    <string name="user_password_err">用户名和密码错误</string>
    <string name="submit_loading">正在提交</string>
    <string name="save_loading">正在保存</string>
    <string name="loading">正在加载</string>
    <string name="find_password_success">密码已更新</string>
    <string name="password_update_success">密码已修改</string>
    <string name="find_password_data_err_code">数据错误</string>
    <string name="info_head">头像</string>
    <string name="info_phone">手机号</string>
    <string name="info_name">昵称</string>
    <string name="info_company">公司</string>
    <string name="info_address">地址</string>
    <string name="info_password">密码修改</string>
    <string name="info_version">版本号</string>
    <string name="info_exit">安全退出</string>
    <string name="token_no_code_text">亲，请您先登录账号！</string>
    <string name="token_invalid_code_text">您的登录已经失效，请重新登录！</string>
    <string name="album">从相册中选择</string>
    <string name="capture">使用相机拍摄</string>
    <string name="no_write">未填写</string>
    <string name="save">保存</string>
    <string name="update_name">修改昵称</string>
    <string name="update_name_prompt">好名字更容易让收购员记住你。</string>
    <string name="write_name">请填写昵称</string>
    <string name="choice_province">选择省份</string>
    <string name="choice_city">选择城市</string>

    <string name="remove"><u>删除</u></string>
    <string name="release">确定发布</string>
    <string name="remarks_hint">输入备注说明</string>
    <string name="produce_title">收购产品</string>
    <string name="produce_operation">操作</string>
    
    <string name="search_text"><u>搜索</u></string>
    <string name="choice_produce_hint">请输入农产品名搜索</string>
    <string name="choice_produce_title">选择农产品</string>
    <string name="choice_company_title">选择公司</string>
    <string name="choice_company_hint">请输入公司名搜索</string>
    <string name="no_content">没有相关信息</string>
    
    <string name="vegetable_vendor_count">此区域共有%s个卖菜信息</string>
    <string name="get_into">进入>></string>
    <string name="match_info">匹配信息</string>
    <string name="str_archive">343re443*#!srs4@</string>

    <string name="more_data">加载更多</string>
    <string name="no_more_data">已加载全部数据</string>
    <string name="load_more">加载更多</string>
    <string name="pull_to_refresh_pull_label">松开刷新</string>
    <string name="pull_to_refresh_refresh_lasttime">最近更新</string>
    
    <string name="call">我要订购</string>
    <string name="estimated_quantity">预计产量%s</string>
    <string name="salas_time">售卖时间%1$s至%2$s</string>
    <string name="hawker">小贩</string>
    <string name="add_company_title">添加公司</string>
    <string name="company_name">公司名</string>
    <string name="company_name_hint">请输入公司名</string>
    <string name="details"><u>查看详情</u></string>
    <string name="my_collection">我的收藏</string>
    <string name="sale_normal">正在售卖</string>
    <string name="sale_close">已关闭</string>
    <string name="sale_information">售卖信息</string>
    
    <string name="not_exist_release">你还未发布信息,请点击右上角+进行发布</string>
    <string name="region_not_info">此区域没有与你匹配的信息</string>
    
    <string name="release_item_mate">与我匹配的</string>
    <string name="release_item_collection">我的收藏</string>
    
    <string name="farmer_info_tab_sale">正在售卖</string>
    <string name="farmer_info_tab_history">历史发布</string>
    <string name="vedio_loading">视频已加载</string>
    
    <string name="framer_info_title">种植农户信息</string>
    <!-- autolistview -->
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">松开可以刷新</string>
    <string name="lastUpdateTime">最近更新：%s</string>
    <string name="load_full">已加载全部</string>
    <string name="no_data">暂无数据</string>
    <string name="more">加载中</string>
    <string name="d">图片描述</string>
    <string name="delete_msg">删除消息</string>
    <string name="copy_msg">复制消息</string>
    <string name="shouye">发现</string>
    <string name="zhaocai">找菜</string>
    <string name="contacts">联系人</string>
    <string name="xiaoxi">消息</string>
    <string name="wode">我的</string>
    <string name="fabu">发布收购</string>
</resources>