<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <include
        android:id="@+id/title_bar_layout"
        android:layout_alignParentTop="true"
        layout="@layout/title_bar_back_text" />

    

    <LinearLayout
        android:id="@+id/company_name_layout"
        android:layout_width="match_parent"
        android:layout_height="60dip"
        android:layout_below="@id/title_bar_layout"
        android:background="@drawable/item_bg_line"
        android:gravity="center_vertical"
        
        android:orientation="horizontal" >

        <TextView
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:paddingLeft="20dip"
            android:text="@string/company_name"
            android:textColor="#333333"
            android:textSize="16dip" />

        <EditText
            android:id="@+id/company_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/company_name_hint"
            
            android:textColor="#666"
            android:textColorHint="#BBB"
            android:textSize="16dip" />

        
    </LinearLayout>

   

    
 <LinearLayout 
        android:id="@+id/confirm_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dip"
        android:layout_below="@id/company_name_layout"
        >
        <Button 
            android:id="@+id/confirm_bn"
            android:layout_width="320dip"
            android:layout_height="50dip"
            android:background="@drawable/bn_bg_green_big"
            android:text="@string/confirm"
            android:textColor="#FFF"
            android:gravity="center"
            android:textSize="16dip"
            />
        
    </LinearLayout>
</RelativeLayout>