<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <include
        android:id="@+id/title_bar_layout"
        android:layout_alignParentTop="true"
        layout="@layout/title_bar_back_text" />

    <RelativeLayout
        android:id="@+id/head_layout"
        android:layout_width="match_parent"
        android:layout_height="90dip"
        android:layout_below="@id/title_bar_layout"
        android:layout_marginTop="15dip"
        android:background="@drawable/item_bg_line_click"
        android:clickable="true" >

        <TextView
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:paddingLeft="20dip"
            android:text="@string/info_head"
            android:textColor="#333333"
            android:textSize="16dip" />

        <ImageView
            android:id="@+id/head_img"
            android:layout_width="70dip"
            android:layout_height="70dip"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dip"
            android:scaleType="fitXY"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/phone_layout"
        android:layout_width="match_parent"
        android:layout_height="45dip"
        android:layout_below="@id/head_layout"
        android:background="@drawable/item_bg_line_click"
        android:clickable="false" >

        <TextView
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:paddingLeft="20dip"
            android:text="@string/info_phone"
            android:textColor="#333333"
            android:textSize="16dip" />

        <TextView
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dip"
            android:textColor="#999"
            android:textSize="16dip" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/name_layout"
        android:layout_width="match_parent"
        android:layout_height="45dip"
        android:layout_below="@id/phone_layout"
        android:background="@drawable/item_bg_line_click"
        android:clickable="true" >

        <TextView
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:paddingLeft="20dip"
            android:text="@string/info_name"
            android:textColor="#333333"
            android:textSize="16dip" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dip"
            android:textColor="#999"
            android:textSize="16dip" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/company_layout"
        android:layout_width="match_parent"
        android:layout_height="45dip"
        android:layout_below="@id/name_layout"
        android:background="@drawable/item_bg_line_click"
        android:clickable="true" >

        <TextView
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:paddingLeft="20dip"
            android:text="@string/info_company"
            android:textColor="#333333"
            android:textSize="16dip" />

        <TextView
            android:id="@+id/company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dip"
            android:textColor="#999"
            android:textSize="16dip" />
    </RelativeLayout>
    
    <RelativeLayout
        android:id="@+id/address_layout"
        android:layout_width="match_parent"
        android:layout_height="45dip"
        android:layout_below="@id/company_layout"
        android:background="@drawable/item_bg_click"
        android:clickable="true" >

        <TextView
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:paddingLeft="20dip"
            android:text="@string/info_address"
            android:textColor="#333333"
            android:textSize="16dip" />

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dip"
            android:textColor="#999"
            android:textSize="16dip" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/password_layout"
        android:layout_width="match_parent"
        android:layout_height="45dip"
        android:layout_below="@id/address_layout"
        android:layout_marginTop="15dip"
        android:background="@drawable/item_bg_click"
        android:clickable="true" >

        <TextView
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:paddingLeft="20dip"
            android:text="@string/info_password"
            android:textColor="#333333"
            android:textSize="16dip" />
    </RelativeLayout>



</RelativeLayout>